@@ -1,3 +1,27 @@
+/**
+ * nInvaders - a space invaders clone for ncurses
+ * Copyright (C) 2002-2003 Dettus
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
+ *
+ * homepage: http://ninvaders.sourceforge.net
+ * mailto: ninvaders-devel@lists.sourceforge.net
+ *
+ */
+ 
+ 
 #include <stdio.h>
 #include <unistd.h>
 #include "globals.h"
@@ -5,21 +29,7 @@
 
 #define MAJOR    0
 #define MINOR    0
-#define RELEASE 10
-
-
-#ifdef WIN32
-#define usleep(x) Sleep(x/1000)
-#endif
-
-
-/**
- * sleep for specified time
- */
-void doSleep(int microseconds)
-{
-	usleep(microseconds);
-}
+#define RELEASE 11
 
 
 /**
