@@ -1,3 +1,15 @@
+2003-04-22  Alexander Hollinger <alexander.hollinger@gmx.net>
+	
+	* globals.c (doSleep): deleted method. not used any more.
+
+	* globals.c: incremented version number from 0.0.10 to 0.0.11
+	
+	* globals.c: removed '#ifdef win32' instruction.
+	
+	* *.c, *.h: added license notice to each file
+	
+	* renamed ToDo to TODO
+
 2003-04-18  Alexander Hollinger <alexander.hollinger@gmx.net>
 
 	* nInvaders.c (finish): "barely mediocre" and "show promise"
